--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
   </head>
   <body>
     <div class="intro" id="introText">
-      heeey babe, semangaat yaa. kamu pasti bisa bangkit buat hari ini. here's a lil messages dari aku
+      heeey babe, semangaat yaa. kamu pasti bisa bangkit buat hari ini. here's a lil messages dari aku<b>
+        coba zoom out ya kalo textnya ga muncul semua hehehehe<b>
             </b>
           </b>
         </b>
@@ -24,3 +25,4 @@
     <script src="script.js"></script>
   </body>
 </html>
+
