--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div class="intro" id="introText">
-      heeey babe, semangaat yaa. kamu pasti bisa bangkit buat hari ini. here's a lil messages dari aku<b>
+      heeey babe, semangaat yaa. kamu pasti bisa bangkit buat hari ini. here's a lil messages dari aku<br>
         coba zoom out ya kalo textnya ga muncul semua hehehehe<b>
             </b>
           </b>
@@ -25,4 +25,5 @@
     <script src="script.js"></script>
   </body>
 </html>
+
 
